--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,20 +1,13 @@
+@import "https://cdn.sheep.cafe/berkeley_mono";
+@import "https://cdn.sheep.cafe/inter";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Work Sans';
-  src: url('$lib/assets/fonts/WorkSans-VariableFont_wght.ttf') format('truetype-variations');
-  font-weight: 1 999;
-}
-
-@font-face {
-  font-family: 'Snowburst One';
-  src: url('$lib/assets/fonts/SnowburstOne-Regular.ttf') format('truetype');
-}
 
 :root {
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Inter', sans-serif, "Noto Color Emoji";
   /* Used by layouts to ensure proper spacing between navbar and content */
   --navbar-height: calc(theme(spacing.18) + 4px);
 }
